--- a/resources/views/app/layout/layout.twig
+++ b/resources/views/app/layout/layout.twig
@@ -26,13 +26,30 @@
 
 	</head>
 
-	<body>
+	<body class="bg-light">
+
+        <nav class="bg-white navbar navbar-light px-5">
+            <div class="container">
+                <a class="navbar-brand" href="#">Blogginit</a>
+                <a href="/logout" class="btn btn-primary">Logout</a>
+            </div>
+        </nav>
 
 		<div class="container">
         
             {% block content %}{% endblock %}
 
 		</div>
+
+        <footer class="bg-primary text-white p-2 text-center fixed-bottom">
+
+            <div class="container">
+
+                <p>&copy; {{ 'now' | date('Y') }} Blogginit. All rights reserved.</p>
+                
+            </div>
+
+        </footer>
 
 	</body>
 
