--- a/resources/views/landing/layout/layout.twig
+++ b/resources/views/landing/layout/layout.twig
@@ -23,17 +23,33 @@
 		<title>
 
 			{% block title %}{% endblock %}
-            
+
 		</title>
 
 	</head>
 
-	<body>
+	<body class="bg-light">
+
+    {% block nav %}
+        
+    {% endblock %}
 
 		<div class="container">
+        
             {% block content %}{% endblock %}
 
 		</div>
+
+        
+    <footer class="bg-primary text-white p-2 text-center fixed-bottom">
+
+        <div class="container">
+
+            <p>&copy; {{ 'now' | date('Y') }} Blogginit. All rights reserved.</p>
+            
+        </div>
+
+    </footer>
 
 	</body>
 
