Made Error Reporting dynamic Replaced Error handling middleware Got rid of all sessions

--- a/resources/views/landing/error.twig
+++ b/resources/views/landing/error.twig
@@ -7,8 +7,8 @@
 {% block content %}
 <div class="text-center mt-5">
 
-        <h1 class="display-1 text-danger">{{ code }}</h1>
-        <p class="fs-4 lead">{{ message }}</p>
+        <h1 class="display-1 text-danger">{{ error.code}}</h1>
+        <p class="fs-4 lead">{{ error.message}}</p>
         <a href="/" class="btn btn-primary">Go back to Home</a>
 
 </div>
