Grouped routes Minor changes in twig files

--- a/resources/views/landing/login.twig
+++ b/resources/views/landing/login.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    
+
    <div class="card shadow-sm p-4 mx-auto my-5" style="max-width: 400px; width: 100%;">
         <h1 class="h4 text-center mb-4">Login to Blogginit</h1>
         <form action="/login" method="POST">
@@ -20,7 +20,7 @@
             <button type="submit" class="btn btn-primary w-100">Login</button>
         </form>
         <div class="text-center mt-3">
-            <p class="mb-0">Don't have an account? <a href="/register" class="text-primary">Sign up</a>.</p>
+            <p class="mb-0">Don't have an account? <a href="/register" class="text-primary">Register</a>.</p>
         </div>
     </div>
 
