--- a/resources/views/landing/register.twig
+++ b/resources/views/landing/register.twig
@@ -8,14 +8,14 @@
 
 	<div class="card shadow-sm p-4 mx-auto mt-3 mb-5" style="max-width: 400px; width: 100%;">
 		<h1 class="h4 text-center mb-4">Welcome to Blogginit</h1>
-		<form action="" method="POST" class="registration-form">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" id="username" name="username" class="form-control" required>
-            </div>
+		<form action="/register" method="POST" class="registration-form">
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="email" id="email" name="email" class="form-control" required>
+            </div>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" id="username" name="username" class="form-control" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
