--- a/resources/views/landing/register.twig
+++ b/resources/views/landing/register.twig
@@ -5,25 +5,36 @@
 {% endblock %}
 
 {% block content %}
-
 	<div class="card shadow-sm p-4 mx-auto mt-3 mb-5" style="max-width: 400px; width: 100%;">
 		<h1 class="h4 text-center mb-4">Welcome to Blogginit</h1>
 		<form action="/register" method="POST" class="registration-form">
             <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" id="username" name="username" class="form-control" required>
+                <label for="name" class="form-label">name</label>
+                <input type="text" id="name" name="name" class="form-control {{ errors.name ? 'is-invalid' : '' }}" value="{{ old.name }}" required>
+                <div class="invalid-feedback">
+                    {{ errors.name | first }}
+                </div>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" name="email" class="form-control" required>
+                <input type="email" id="email" name="email" class="form-control {{ errors.email ? 'is-invalid' : '' }}" value="{{ old.email }}" required>
+                <div class="invalid-feedback">
+                    {{ errors.email | first }}
+                </div>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" id="password" name="password" class="form-control" required>
+                <input type="password" id="password" name="password" class="form-control  {{ errors.password ? 'is-invalid' : '' }}" required>
+                <div class="invalid-feedback">
+                    {{ errors.password | first }}
+                </div>
             </div>
             <div class="mb-3">
-                <label for="confirm_password" class="form-label">Confirm Password</label>
-                <input type="password" id="confirm_password" name="confirm_password" class="form-control" required>
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" id="confirmPassword" name="confirmPassword" class="form-control {{ errors.confirmPassword ? 'is-invalid' : '' }}" required>
+                <div class="invalid-feedback">
+                    {{ errors.confirmPassword | first }}
+                </div>
             </div>
             <button type="submit" class="btn btn-primary w-100">Register</button>
         </form>
