--- a/resources/views/app/layout/layout.twig
+++ b/resources/views/app/layout/layout.twig
@@ -31,7 +31,7 @@
         <nav class="bg-white navbar navbar-light px-5">
             <div class="container">
                 <a class="navbar-brand" href="#">Blogginit</a>
-                {{ user.name }}j
+                {{ user.name }}
                 <a href="/logout" class="btn btn-primary">Logout</a>
             </div>
         </nav>
