--- a/resources/views/emails/welcome.html.twig
+++ b/resources/views/emails/welcome.html.twig
@@ -15,13 +15,11 @@
             <div class="card-body">
                 <p>Hi {{ user.name }},</p>
                 <p>Thank you for joining Blogginit! We're excited to have you on board.</p>
-                <p>Your verification code is:</p>
-                <h3 class="text-center text-success">{{ verification_code }}</h3>
-                <p>Please use this code to verify your account and get started.</p>
+                <p><a href="{{ activationLink }}">Click here </a>to activate your account.</p>
+                <p>Please use this code to verify your account and get started, verification code expires on {{ expirationDate |date('Y-m-d') }} by {{ expirationDate |date('g:i A') }} </p>
                 <p>If you have any questions, feel free to reach out to our support team.</p>
                 <p>Happy blogging!</p>
-                <p>Best regards,</p>
-                <p><strong>The Blogginit Team</strong></p>
+                <p>Best regards, <strong>The Blogginit Team</strong></p>
             </div>
             <div class="card-footer text-muted text-center">
                 &copy; {{ "now"|date("Y") }} Blogginit. All rights reserved.
