--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -20,6 +20,7 @@
             <button type="submit" class="btn btn-primary w-100">Login</button>
         </form>
         <div class="text-center mt-3">
+            <p class="mb-0"><a href="/register" class="text-primary">Forgot Password</a>?</p>
             <p class="mb-0">Don't have an account? <a href="/register" class="text-primary">Register</a>.</p>
         </div>
     </div>
