Fixed incorrect twig extends directory

--- a/resources/views/auth/error.twig
+++ b/resources/views/auth/error.twig
@@ -1,8 +1,6 @@
-{% extends "landing/layout/layout.twig" %}
+{% extends "auth/layout/layout.twig" %}
 
-{% block title %}
-	Blogginit | Error
-{% endblock %}
+{% block title %}Blogginit | Error{% endblock %}
 
 {% block content %}
 <div class="text-center mt-5">
