--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -1,8 +1,6 @@
 {% extends "landing/layout/layout.twig" %}
 
-{% block title %}
-	Blogginit | Login
-{% endblock %}
+{% block title %}Blogginit | Login{% endblock %}
 
 {% block content %}
 
