--- a/resources/views/auth/register.twig
+++ b/resources/views/auth/register.twig
@@ -1,8 +1,6 @@
-{% extends "landing/layout/layout.twig" %}
+{% extends "auth/layout/layout.twig" %}
 
-{% block title %}
-	Blogginit | Register
-{% endblock %}
+{% block title %}Blogginit | Register{% endblock %}
 
 {% block content %}
 	<div class="card shadow-sm p-4 mx-auto mt-3 mb-5" style="max-width: 400px; width: 100%;">
