--- a/resources/views/auth/verify.twig
+++ b/resources/views/auth/verify.twig
@@ -1,4 +1,4 @@
-{% extends 'app/layout/layout.twig' %}
+{% extends 'auth/layout/layout.twig' %}
 
 {% block title %}Blogginit | Verify Email{% endblock %}
 
