- Added Resend Validation Email. - Changed Logout to post request.

--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -1,4 +1,4 @@
-{% extends "landing/layout/layout.twig" %}
+{% extends "auth/layout/layout.twig" %}
 
 {% block title %}Blogginit | Login{% endblock %}
 
@@ -18,7 +18,7 @@
             <button type="submit" class="btn btn-primary w-100">Login</button>
         </form>
         <div class="text-center mt-3">
-            <p class="mb-0"><a href="/register" class="text-primary">Forgot Password</a>?</p>
+            <p class="mb-0"><a href="/forgot-password" class="text-primary">Forgot Password</a>?</p>
             <p class="mb-0">Don't have an account? <a href="/register" class="text-primary">Register</a>.</p>
         </div>
     </div>
