--- a/resources/views/auth/layout/layout.twig
+++ b/resources/views/auth/layout/layout.twig
@@ -2,7 +2,8 @@
 <html lang="en">
 
 	<head>
-
+        <meta id="csrfName" name="{{ csrf.keys.name }}" content="{{ csrf.name }}">
+        <meta id="csrfValue" name="{{ csrf.keys.value }}" content="{{ csrf.value }}">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -31,22 +32,22 @@
 	<body class="bg-light">
 
     {% block nav %}
-        
+
     {% endblock %}
 
 		<div class="container">
-        
+
             {% block content %}{% endblock %}
 
 		</div>
 
-        
+
     <footer class="bg-primary text-white p-2 text-center fixed-bottom">
 
         <div class="container">
 
             <p>&copy; {{ 'now' | date('Y') }} Blogginit. All rights reserved.</p>
-            
+
         </div>
 
     </footer>
