--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -1,27 +1,35 @@
 {% extends "auth/layout/layout.twig" %}
 
-{% block title %}Blogginit | Login{% endblock %}
+{% block title %}Blogginit | Login
+{% endblock %}
 
 {% block content %}
 
-   <div class="card shadow-sm p-4 mx-auto my-5" style="max-width: 400px; width: 100%;">
-        <h1 class="h4 text-center mb-4">Login to Blogginit</h1>
-        <form action="/login" method="POST">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email Address</label>
-                <input type="email" id="email" name="email" class="form-control" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" id="password" name="password" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
-        </form>
-        <div class="text-center mt-3">
-            <p class="mb-0"><a href="/forgot-password" class="text-primary">Forgot Password</a>?</p>
-            <p class="mb-0">Don't have an account? <a href="/register" class="text-primary">Register</a>.</p>
-        </div>
-    </div>
+	<div class="card shadow-sm p-4 mx-auto my-5" style="max-width: 400px; width: 100%;">
+		<h1 class="h4 text-center mb-4">Login to Blogginit</h1>
+		<form action="/login" method="POST">
+			<div class="mb-3">
+				<label for="email" class="form-label">Email Address</label>
+				<input type="email" id="email" name="email" class="form-control {{ errors.email ? 'is-invalid' : '' }}" required>
+				<div class="invalid-feedback">
+					{{ errors.email | first }}
+				</div>
+			</div>
+			<div class="mb-3">
+				<label for="password" class="form-label">Password</label>
+				<input type="password" id="password" name="password" class="form-control {{ errors.password ? 'is-invalid' : '' }}" required>
+				<div class="invalid-feedback">
+					{{ errors.password | first }}
+				</div>
+			</div>
+			<button type="submit" class="btn btn-primary w-100">Login</button>
+		</form>
+		<div class="text-center mt-3">
+			<p class="mb-0">
+				<a href="/forgot-password" class="text-primary">Forgot Password</a>?</p>
+			<p class="mb-0">Don't have an account?
+				<a href="/register" class="text-primary">Register</a>.</p>
+		</div>
+	</div>
 
 {% endblock %}
-
