Fixed wrong error display

--- a/resources/views/auth/login.twig
+++ b/resources/views/auth/login.twig
@@ -10,7 +10,7 @@
 		<form action="/login" method="POST">
 			<div class="mb-3">
 				<label for="email" class="form-label">Email Address</label>
-				<input type="email" id="email" name="email" class="form-control {{ errors.email ? 'is-invalid' : '' }}" required>
+				<input type="email" id="email" name="email" class="form-control {{ errors.email ? 'is-invalid' : '' }}" value="{{ old.email }}" required>
 				<div class="invalid-feedback">
 					{{ errors.email | first }}
 				</div>
