--- a/resources/views/app/layout/layout.twig
+++ b/resources/views/app/layout/layout.twig
@@ -3,6 +3,8 @@
 
 	<head>
 
+		<meta id="csrfName" name="{{ csrf.keys.name }}" content="{{ csrf.name }}">
+		<meta id="csrfValue" name="{{ csrf.keys.value }}" content="{{ csrf.value }}">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -28,30 +30,33 @@
 
 	<body class="bg-light">
 
-        <nav class="bg-white navbar navbar-light px-5">
-            <div class="container">
-                <a class="navbar-brand" href="#">Blogginit</a>
-                {{ user.name }}
-                <a href="/logout" class="btn btn-primary">Logout</a>
-            </div>
-        </nav>
+		<nav class="bg-white navbar navbar-light px-5">
+			<div class="container">
+				<a class="navbar-brand" href="#">Blogginit</a>
+				{{ user.name }}
+				<form action="/logout" method="post">
+					{{ csrf.fields | raw }}
+					<button class="btn btn-primary">Logout</button>
+				</form>
+			</div>
+		</nav>
 
-		<div class="container">
-        
-            {% block content %}{% endblock %}
+		<div class="container"> {% block content %}{% endblock %}
 
-		</div>
+			</div>
 
-        <footer class="bg-primary text-white p-2 text-center fixed-bottom">
+			<footer class="bg-primary text-white p-2 text-center fixed-bottom">
 
-            <div class="container">
+				<div class="container">
 
-                <p>&copy; {{ 'now' | date('Y') }} Blogginit. All rights reserved.</p>
-                
-            </div>
+					<p>&copy;
+						{{ 'now' | date('Y') }}
+						Blogginit. All rights reserved.</p>
 
-        </footer>
+				</div>
 
-	</body>
+			</footer>
 
-</html>
+		</body>
+
+	</html>
