--- a/resources/views/app/layout/layout.twig
+++ b/resources/views/app/layout/layout.twig
@@ -12,12 +12,15 @@
 		{% block stylesheets %}
 
 			{{ encore_entry_link_tags('main') }}
+			{{ encore_entry_link_tags('sidebar') }}
 
 		{% endblock %}
 
 		{% block javascript %}
 
 			{{ encore_entry_script_tags('main') }}
+			{{ encore_entry_script_tags('sidebar') }}
+
 
 		{% endblock %}
 
@@ -29,33 +32,84 @@
 
 	<body class="bg-light">
 
-		<nav class="bg-white navbar navbar-light px-5">
+		<nav class="bg-white navbar navbar-light px-5 border-bottom border-secondary-subtle">
 			<div class="container">
-				<a class="navbar-brand" href="#">Blogginit</a>
-				{{ user.name }}
-				<form action="/logout" method="post">
-					{{ csrf.fields | raw }}
-					<button class="btn btn-primary">Logout</button>
-				</form>
+				<a class="navbar-brand" href="/">Blogginit</a>
+
+				<div class="profile-dropdown">
+					<div class="dropdown">
+						<button class="btn btn-primary dropdown-toggle" type="button" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+							{{ user.name }}
+						</button>
+						<ul class="dropdown-menu" aria-labelledby="profileDropdown">
+							<li>
+								<a class="dropdown-item" href="/profile"><i class="bi bi-person-fill me-1 text-primary"></i>My Profile</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="/collaborations"><i class="bi bi-people-fill me-1 text-primary"></i>Collaboration
+									<span class="badge bg-success">new</span>
+								</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="/help"><i class="bi bi-question-circle-fill me-1 text-primary"></i>Help</a>
+							</li>
+							<li>
+								<form action="/logout" method="post">
+									{{ csrf.fields | raw }}
+									<button class="dropdown-item"><i class="bi bi-door-open-fill me-1 text-primary"></i>Logout</button>
+								</form>
+							</li>
+						</ul>
+					</div>
+				</div>
+
 			</div>
 		</nav>
 
-		<div class="container"> {% block content %}{% endblock %}
-
-			</div>
-
-			<footer class="bg-primary text-white p-2 text-center fixed-bottom">
-
-				<div class="container">
-
-					<p>&copy;
-						{{ 'now' | date('Y') }}
-						Blogginit. All rights reserved.</p>
-
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-3 mt-2">
+					<div class="card border-secondary-subtle">
+						<div class="card-body">
+							<h5 class="card-title text-primary">More Contents</h5>
+                            <ul class="list-group">
+                                <li class="list-unstyled mb-3">
+                                    <a href="/dashboard">Dashboard</a>
+                                </li>
+                                <li class="list-unstyled mb-3">
+                                    <a href="/reports">Statistics</a>
+                                </li>
+                                <li class="list-unstyled mb-3">
+                                    <a href="/settings">Settings</a>
+                                </li>
+                                <hr>
+                                <li class="list-unstyled mb-3">
+                                    <a href="/about">About</a>
+                                </li>
+                                <li class="list-unstyled mb-3">
+                                    <a href="/tos">Terms of Service</a>
+                                </li>
+                                <li class="list-unstyled mb-3">
+                                    <a href="/privacy">Privacy Policy</a>
+                                </li>
+                            </ul>
+						</div>
+					</div>
 				</div>
-
-			</footer>
-
-		</body>
-
-	</html>
+				<div class="col-sm-12 col-md-9 column">
+					<div class="container">
+						<div class="ms-3">
+							<h1 class="text-primary"> {% block page_title %}{% endblock %}
+								</h1>
+								<p class="text-secondary"> {% block page_description %}{% endblock %}
+									</p>
+								</div>
+								{% block content %}{% endblock %}
+							</div>
+						</div>
+					</div>
+				</div>
+			</body>
+		</html>
+	</div>
+</body></html>
