- Formatted routes and updated template - Fixed settings button bug - Updated reports and dashboard template

--- a/resources/views/app/dashboard.twig
+++ b/resources/views/app/dashboard.twig
@@ -21,7 +21,7 @@
 					<div class="card-body">
 						<h5 class="card-title text-primary">Statistics</h5>
 						<p class="card-text text-secondary">View the latest stats for your blog posts here.</p>
-						<a href="#" class="btn btn-primary">View Stats</a>
+						<a href="/reports" class="btn btn-primary">View Stats</a>
 					</div>
 				</div>
 			</div>
@@ -39,7 +39,7 @@
 					<div class="card-body">
 						<h5 class="card-title text-primary">Settings</h5>
 						<p class="card-text text-secondary">Update your account settings.</p>
-						<a href="#" class="btn btn-primary">Go to Settings</a>
+						<a href="/settings" class="btn btn-primary">Go to Settings</a>
 					</div>
 				</div>
 			</div>
