- Updated extras templates. - Modified ExtrasController

--- a/resources/views/extras/help.twig
+++ b/resources/views/extras/help.twig
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-	Blogginit | About
+	Blogginit | Help
 {% endblock %}
 
 {% block page_title %}
@@ -11,7 +11,7 @@
 
 
 {% block page_description %}
-	Read more to learn about Blogginit!
+	Read more to learn how to use Blogginit!
 {% endblock %}
 
 {% block content %}
