--- a/resources/views/extras/privacy.twig
+++ b/resources/views/extras/privacy.twig
@@ -11,7 +11,7 @@
 
 
 {% block page_description %}
-	Read more to learn about Blogginit!
+	Find out how Blogginit protects your privacy!
 {% endblock %}
 
 {% block content %}
