--- a/resources/views/extras/services.twig
+++ b/resources/views/extras/services.twig
@@ -11,7 +11,7 @@
 
 
 {% block page_description %}
-	Read more to learn about Blogginit!
+	Heres what Blogginit has to offer!
 {% endblock %}
 
 {% block content %}
