- Renamed BlogController to plural - Separated reports from blog function - Added routes and view for blog - Minor change on dashboard, settings and reports template

--- a/resources/views/app/dashboard.twig
+++ b/resources/views/app/dashboard.twig
@@ -30,7 +30,7 @@
 					<div class="card-body">
 						<h5 class="card-title text-primary">Manage Posts</h5>
 						<p class="card-text text-secondary">Create, edit, or delete your posts.</p>
-						<a href="#" class="btn btn-primary">Manage Posts</a>
+						<a href="/blogs" class="btn btn-primary">Manage Posts</a>
 					</div>
 				</div>
 			</div>
