--- a/resources/views/app/settings.twig
+++ b/resources/views/app/settings.twig
@@ -58,7 +58,7 @@
 		<p class="lead mt-4">Display</p>
 		<hr>
 		<div class="mb-3">
-			<form method="POST" action="/update-security-settings">
+			<form method="POST" action="/update-display-settings">
 				<div class="mb-3 row">
 					<div class="card bg-light border-primary col mx-2">
 						<input type="radio" name="theme" id="theme" value="light" checked>
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 				</div>
-				<button type="button" class="btn btn-primary update-theme-btn">Save Changes</button>
+				<button type="button" class="update-display-btn btn btn-primary update-theme-btn">Save Changes</button>
 			</form>
 		</div>
 
