- Minor change in dashboard and blogs template - changed to renderCreateBlog method and updated route - Added category table for blogs - Added uuid and category to Blog entity

--- a/resources/views/app/blogs.twig
+++ b/resources/views/app/blogs.twig
@@ -31,7 +31,7 @@
 				<div class="col-12 text-center">
 					<h1 class="lead alert alert-warning" role="alert">No Blogs Found</h1>
 				</div>
-				<a href="#" class="btn btn-primary bg-gradient px-2 col-4 ms-5">Create your first blog</a>
+				<a href="/blogs/create" class="btn btn-primary bg-gradient px-2 col-4 ms-5">Create your first blog</a>
 			</div>
 
 		{% endif %}
