--- a/resources/views/app/dashboard.twig
+++ b/resources/views/app/dashboard.twig
@@ -28,9 +28,9 @@
 			<div class="col-md-4">
 				<div class="card border-primary">
 					<div class="card-body">
-						<h5 class="card-title text-primary">Manage Posts</h5>
-						<p class="card-text text-secondary">Create, edit, or delete your posts.</p>
-						<a href="/blogs" class="btn btn-primary">Manage Posts</a>
+						<h5 class="card-title text-primary">Manage Blogs</h5>
+						<p class="card-text text-secondary">Create, edit, or delete your blogs.</p>
+						<a href="/blogs" class="btn btn-primary">Manage Blogs</a>
 					</div>
 				</div>
 			</div>
